--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,7 @@ phases:
       - pip install -r requirements.txt
   build:
     commands:
+      #testes
       - apk add --no-cache tzdata
       - ln -sf /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime
       - echo "America/Sao_Paulo" > /etc/timezone
