--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,13 @@ phases:
     commands:
       - python -V
       - pip install -r requirements.txt
+      - sudo timedatectl set-timezone America/Sao_Paulo
+  pre_build:
+    commands:
+      - pip show robotframework
   build:
     commands:
-      - apk add --no-cache tzdata
-      - ln -sf /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime
-      - echo "America/Sao_Paulo" > /etc/timezone
-      - python -m robot -v from:aws -v env:beta tests/ || true
+      - python -m robot -v from:aws -v env:beta tests/
       - export FOLDER=$(date +%Y-%m-%d_%H:%M)
       - mkdir $FOLDER
       - mv log.html $FOLDER
