--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,5 +30,6 @@ artifacts:
   name: log-report
 
 cache:
-  paths:
-    - '/root/.pyenv/versions/3.11.2'
+  Type: LOCAL
+    Modes:
+      - LOCAL_CUSTOM_CACHE
