--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,8 @@ phases:
       - pip install --cache-dir $HOME/.pip-cache -r requirements.txt
       - sudo apt-get update
       - sudo apt-get install -y xvfb
+      - npx playwright install chromium --use-cache
+      - npx playwright install-deps --use-cache || (echo "Failed to install Playwright dependencies, using cache" && true)
 
   pre_build:
     commands:
