--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,10 +7,8 @@ phases:
       - pip install --cache-dir $HOME/.pip-cache -r requirements.txt
       - sudo apt-get update
       - sudo apt-get install -y xvfb
-      - pip install --cache-dir $HOME/.pip-cache playwright
-      - npx playwright install chromium --with-deps
-
-
+      - playwright install chromium --deps
+      # - playwright install 
 
   pre_build:
     commands:
