--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,8 @@ phases:
       - pip install --cache-dir $HOME/.pip-cache -r requirements.txt
       - sudo apt-get update
       - sudo apt-get install -y xvfb
-      - playwright install chromium --deps
-      # - playwright install 
+      - playwright install chromium 
+      - playwright install-deps
 
   pre_build:
     commands:
